--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,6 +59,9 @@ set -g visual-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
 
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # loud or quiet?
 set -g visual-activity off
 set -g visual-bell off
@@ -195,6 +198,7 @@ bind -n M-0     select-window -t 10
 bind -n C-x     send-keys C-l \; run 'tmux clear-history' \;
 #bind -n C-x run-shell "tmux show-messages | tail -1 | grep -q on; if [[ \$? == 0 ]]; then export toggle=off; echo true; else export toggle=on; echo false; fi; tmux display-message \$toggle &> /dev/null;;"
 bind-key y capture-pane -S -200 \; save-buffer '/tmp/vim.yank' \; delete-buffer \; display 'Save last 200 to /tmp/vim.yank' \;
+bind -n C-c capture-pane -S -200 \; save-buffer '/tmp/vim.yank' \; delete-buffer \; display 'Save last 200 to /tmp/vim.yank' \;
 #bind-key P command-prompt -p 'save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 unbind p
