--- a/.tmux.conf
+++ b/.tmux.conf
@@ -166,10 +166,10 @@ bind -n M-k     select-pane -U
 bind -n M-l     select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left  select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up    select-pane -U
-bind -n M-Down  select-pane -D
+bind -n M-Left  send-keys C-w \; send-keys -l >
+bind -n M-Right send-keys C-w \; send-keys -l <
+bind -n M-Up    send-keys C-w \; send-keys -l +
+bind -n M-Down  send-keys C-w \; send-keys -l -
 
 #bind -n C-Left  send-keys Escape \; send-keys -l gT
 #bind -n C-Right send-keys Escape \; send-keys -l gt
