--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,7 +98,8 @@ set -g status-justify centre # center align window list
 set -g status-right-length 40
 
 #set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-left ' #S '
+#set -g status-left ' #S '
+set -g status-left ' #S #P'
 set -g status-right '#[fg=white,bg=default]%a %l:%M %p %Y-%m-%d'
 ####################################################
 
