--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,8 +29,8 @@
 #
 # Make it use C-a, similar to gnu-screen
 ####################################################
-#set -g default-terminal "screen-256color"
 set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color-bce"
 
 setw -g utf8 on
 set -gw xterm-keys on # stop shell bindkey when using tmux
