--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,10 +76,11 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 ####################################################
 # Mouse
-setw -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
+#setw -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
 ####################################################
 
 ####################################################
