--- a/.tmux.conf
+++ b/.tmux.conf
@@ -207,6 +207,8 @@ bind-key y capture-pane -S -200 \; save-buffer '/tmp/vim.yank' \; delete-buffer 
 bind-key H pipe-pane 'cat > $HOME/tmuxlog/tmux-#W.log' \; display-message 'Started logging to $HOME/tmuxlog/tmux-#W.log'
 bind-key h pipe-pane \; display-message 'Ended logging to $HOME/tmuxlog/tmux-#W.log'
 
+bind-key C-d pipe-pane -o '~/.tmux-pipe-rdb' \; display-message 'Pipe to $HOME/.tmux-pipe-rdb'
+
 unbind p
 
 #####################################################
