--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,7 @@ set -g history-limit 8000
 set -g display-time 1000
 #set -g pane-active-border-bg colour244
 set -g visual-activity on
+setw -g monitor-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
 
