--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,10 +78,11 @@ set -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 ####################################################
 # Mouse
 #set -g mouse on
-setw -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#setw -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
+set -g mouse on
 ####################################################
 
 ####################################################
