--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,7 +82,12 @@ set -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 #set -g mouse-resize-pane on
 #set -g mouse-select-pane on
 #set -g mouse-select-window on
-set -g mouse on
+if-shell "[[ `tmux -V` == *1.9 ]]" \
+    'setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on;'
+if-shell "[[ `tmux -V` == *2.0 ]]" \
+    'setw -g mode-mouse on; set -g mouse-resize-pane on; set -g mouse-select-pane on; set -g mouse-select-window on;'
+if-shell "[[ `tmux -V` == *2.1 ]]" \
+    'set -g mouse on'
 ####################################################
 
 ####################################################
