--- a/.tmux.conf
+++ b/.tmux.conf
@@ -165,19 +165,27 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-#bind -n C-h    select-pane -L
-#bind -n C-j    select-pane -D
-#bind -n C-k    select-pane -U
-#bind -n C-l    select-pane -R
-
 #maximizing and restoring panes.
 bind -n M-m resize-pane -Z \;
 
 # Should diable gnu-terminal's shortkey Alt+num
-bind -n M-h     select-pane -L
-bind -n M-j     select-pane -D
-bind -n M-k     select-pane -U
-bind -n M-l     select-pane -R
+#bind -n M-o     send-keys C-o
+#bind -n M-i     send-keys C-i
+bind -n M-n     send-keys C-n
+bind -n M-p     send-keys C-p
+bind -n M-[     send-keys C-[
+bind -n M-]     send-keys C-]
+bind -n M-v     send-keys C-v
+
+#bind -n M-h     select-pane -L
+#bind -n M-j     select-pane -D
+#bind -n M-k     select-pane -U
+#bind -n M-l     select-pane -R
+
+bind -n C-h    select-pane -L
+bind -n C-j    select-pane -D
+bind -n C-k    select-pane -U
+bind -n C-l    select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left  send-keys C-w \; send-keys -l >
