--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,6 +72,7 @@ set -g visual-bell off
 set -g visual-silence off
 set -g bell-action none
 setw -g monitor-activity off
+set-option -gw xterm-keys on
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -91,8 +92,8 @@ if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
   "set -g mouse on"
 
 # UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
-  "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
+#if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
+#  "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
 ####################################################
 
 ####################################################
@@ -171,21 +172,20 @@ bind -n M-m resize-pane -Z \;
 # Should diable gnu-terminal's shortkey Alt+num
 #bind -n M-o     send-keys C-o
 #bind -n M-i     send-keys C-i
-bind -n M-n     send-keys C-n
-bind -n M-p     send-keys C-p
+#bind -n M-n     send-keys C-n
+#bind -n M-p     send-keys C-p
 bind -n M-[     send-keys C-[
 bind -n M-]     send-keys C-]
-bind -n M-v     send-keys C-v
 
-#bind -n M-h     select-pane -L
-#bind -n M-j     select-pane -D
-#bind -n M-k     select-pane -U
-#bind -n M-l     select-pane -R
+bind -n M-h     select-pane -L
+bind -n M-j     select-pane -D
+bind -n M-k     select-pane -U
+bind -n M-l     select-pane -R
 
-bind -n C-h    select-pane -L
-bind -n C-j    select-pane -D
-bind -n C-k    select-pane -U
-bind -n C-l    select-pane -R
+#bind -n C-h    select-pane -L
+#bind -n C-j    select-pane -D
+#bind -n C-k    select-pane -U
+#bind -n C-l    select-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left  send-keys C-w \; send-keys -l >
