--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,6 @@
 set -g default-terminal "screen-256color"
 #set -g default-terminal "screen-256color-bce"
 
-setw -g utf8 on
 set -gw xterm-keys on # stop shell bindkey when using tmux
 setw -g xterm-keys on # stop shell bindkey when using tmux
 #unbind-key -a        # will unbind the all default key bind
@@ -66,7 +65,7 @@ bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # loud or quiet?
-set -g focus-events on
+set -g focus-events off
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
@@ -90,16 +89,11 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
 # In version 2.1 "mouse" replaced the previous 4 mouse options
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
   "set -g mouse on"
-
-# UTF8 is autodetected in 2.2 onwards, but errors if explicitly set
-#if-shell -b '[ "$(echo "$TMUX_VERSION < 2.2" | bc)" = 1 ]' \
-#  "set -g utf8 on; set -g status-utf8 on; set -g mouse-utf8 on"
 ####################################################
 
 ####################################################
 # set status bar
 set -g status on
-set -g status-utf8 on
 set -g status-bg colour235 #base02
 set -g status-fg colour136 #yellow
 set -g status-attr default
