--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,7 @@ setw -g monitor-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
 
+# Disable mouse click cause exit select-mode
 bind -Tcopy-mode MouseDrag1Pane setw @mode 1\; copy-mode -M
 bind -Tcopy-mode MouseDragEnd1Pane if -F '#{@mode}' 'send -X copy-selection' 'send -X copy-selection-and-cancel'
 bind -n MouseDrag1Pane if -F '#{mouse_any_flag}' 'if -F "#{pane_in_mode}" "setw -u @mode; copy-mode -M" "send-keys -M"' "setw -u @mode; copy-mode -M"
