--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,9 @@
 #
 # all-panes "<command>"   <<< supported by tmux-all-panes.sh
 #
+# Howtos:
+#      prefix + SHIFT-D    redraw tmux window when switching smaller monitor to bigger one: to choose which client you want to detach from the session.
+#
 # Make it use C-a, similar to gnu-screen
 ####################################################
 set -g default-terminal "screen-256color"
