--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,6 +85,9 @@ set -g visual-activity on
 setw -g monitor-activity on
 set -g word-separators " |-_@"
 setw -g mode-keys vi
+# Set the Layout Alt-4
+#setw -g main-pane-height 60
+setw -g main-pane-width 119
 
 ## Disable mouse left-click cause exit copy-mode
 #bind -Tcopy-mode MouseDrag1Pane setw @mode 1\; copy-mode -M
